correcao da data do artigo
atualizacao da equipe

--- a/nomlex-br.tex
+++ b/nomlex-br.tex
@@ -16,6 +16,7 @@
 
 \title{NOMLEX-BR: \\ A Five Finger Exercise in Lexical Resource Creation}
 \author{Valeria de Paiva \and Alexandre Rademaker}
+\date{Jun, 2011}
 \maketitle
 
 \begin{abstract} 
